<resources>
    <string name="app_name">DoSoptTemplate</string>

    <!-- 로그인 페이지-->
    <string name="login_title">Welcome to SOPT</string>
    <string name="login_pw">PW</string>
    <string name="login_id">ID</string>
    <string name="login_hint_id">아이디를 입력해주세요</string>
    <string name="singUp_hint_pw">비밀번호를 입력해주세요</string>
    <string name="login_login">로그인</string>
    <string name="login_button">아직 회원이 아니신가요?</string>
    <string name="signUp_complete">회원가입 성공했습니다.</string>
    <string name="login_complete">로그인에 성공했습니다.</string>
    <string name="login_wrong">아이디 혹은 비밀번호가 잘못 입력됐습니다.</string>
    <string name="login_not_signUp">회원가입이 되어있지 않습니다.</string>

    <!--회원가입 페이지-->
    <string name="signUp_nickName">NickName</string>
    <string name="signUp_hint_nickName">닉네임을 입력해주세요(필수)</string>
    <string name="signUp_hint_id">아이디를 입력해주세요(필수)</string>
    <string name="signUp_hint_pw">비밀번호를 입력해주세요(필수)</string>
    <string name="signUp_mbti">MBTI</string>
    <string name="signUp_hint_mbti">MBTI를 입력해주세요(필수)</string>
    <string name="signUp_button">회원가입</string>
    <string name="signUp_warning_nickName">*닉네임은 한 글자 이상, 공백만으로는 불가합니다.</string>
    <string name="signUp_warning_id">*아이디는 6~10 글자이내, 영문 및 숫자가 포함되어야 합니다.</string>
    <string name="signUp_warning_pw">*비밀번호는 6~12 글자이내, 영문 및 숫자, 특수문자가 포함되어야 합니다.</string>
    <string name="signUp_warning_mbti">*MBTI는 영문자 4글자로만 이루어져야 합니다.</string>
    <string name="signup_warning_null">모든 항목을 작성해주세요</string>
    <string name="signUp_title">회원가입</string>

    <!--메인페이지-->
    <string name="main_nickName_title">닉네임</string>
    <string name="main_introduce">안녕하세요 띵지입니다</string>
    <string name="main_id">ID</string>
    <string name="main_mbti">MBTI</string>
    <string name="do_android_title"><![CDATA[안봉이들 파이팅>.<]]></string>
    <string name="home_my_name">손수호</string>
    <string name="home_btn_status_message">상태메시지</string>

    <!--통신 관련 메시지-->
    <string name="all_unexpected_error_message">예기치 못한 오류가 발생했습니다. 와이파이 연결을 확인해보세요</string>
    <string name="success_login">로그인에 성공하였고 유저의 ID는 %1$d입니둥</string>
</resources>