<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="24dp">

    <TextView
        android:id="@+id/signUp_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/signUp_title"
        android:textColor="@color/green"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signUp_tv_nickName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_round_green"
        android:paddingHorizontal="16dp"
        android:text="@string/signUp_nickName"
        android:textColor="@color/green"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUp_tv_title" />

    <EditText
        android:id="@+id/signUp_et_nickName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_round_green"
        android:hint="@string/signUp_hint_nickName"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/signUp_tv_nickName"
        app:layout_constraintTop_toBottomOf="@id/signUp_tv_nickName" />

    <TextView
        android:id="@+id/login_tv_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_round_green"
        android:paddingHorizontal="16dp"
        android:text="@string/login_id"
        android:textColor="@color/green"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUp_et_nickName" />


    <EditText

        android:id="@+id/signUp_et_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_round_green"
        android:hint="@string/signUp_hint_id"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/login_tv_id"
        app:layout_constraintTop_toBottomOf="@id/login_tv_id" />

    <TextView
        android:id="@+id/login_tv_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_round_green"
        android:paddingHorizontal="16dp"
        android:text="@string/login_pw"
        android:textColor="@color/green"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUp_et_id" />


    <EditText
        android:id="@+id/signUp_et_pw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_round_green"
        android:hint="@string/signUp_hint_pw"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/login_tv_pw"
        app:layout_constraintTop_toBottomOf="@id/login_tv_pw" />

    <TextView
        android:id="@+id/signUp_tv_mbti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_round_green"
        android:paddingHorizontal="16dp"
        android:text="@string/signUp_mbti"
        android:textColor="@color/green"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUp_et_pw" />


    <EditText
        android:id="@+id/signUp_et_mbti"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_round_green"
        android:hint="@string/signUp_hint_mbti"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/signUp_tv_mbti"
        app:layout_constraintTop_toBottomOf="@id/signUp_tv_mbti" />

    <TextView
        android:id="@+id/signUp_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_round_green"
        android:backgroundTint="@color/green"
        android:gravity="center"
        android:paddingVertical="12dp"
        android:text="@string/signUp_button"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>