<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="20dp">

    <TextView
        android:id="@+id/login_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/login_title"
        android:textColor="@color/green"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_tv_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_round_green"
        android:paddingHorizontal="16dp"
        android:text="@string/login_id"
        android:textColor="@color/green"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_tv_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_container_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/login_hint_id"
        android:paddingHorizontal="4dp"
        android:paddingVertical="12dp"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/login_tv_id"
        app:layout_constraintTop_toBottomOf="@id/login_tv_id">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_et_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/login_tv_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_round_green"
        android:paddingHorizontal="16dp"
        android:text="@string/login_pw"
        android:textColor="@color/green"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_container_id" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_container_pw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/singUp_hint_pw"
        android:inputType="textPassword"
        android:paddingHorizontal="4dp"
        android:paddingVertical="12dp"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/login_tv_pw"
        app:layout_constraintTop_toBottomOf="@id/login_tv_pw">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_et_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/login_tv_singUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingHorizontal="4dp"
        android:paddingVertical="16dp"
        android:text="@string/login_button"
        app:layout_constraintStart_toStartOf="@id/login_container_pw"
        app:layout_constraintTop_toBottomOf="@id/login_container_pw" />

    <TextView
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_round_green"
        android:backgroundTint="@color/green"
        android:gravity="center"
        android:paddingVertical="12dp"
        android:text="@string/login_login"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>